// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary two no pic and two - small 1`] = `
<View>
  <Text>
    secondary-1
  </Text>
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Text>
    secondary-2
  </Text>
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Text>
    support-1
  </Text>
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Text>
    support-2
  </Text>
</View>
`;

exports[`2. secondary two no pic and two - medium 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        secondary-1
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        secondary-2
      </Text>
    </View>
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        support-1
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        support-2
      </Text>
    </View>
  </View>,
]
`;

exports[`3. secondary two no pic and two - wide 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 10,
    }
  }
>
  <View
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <Text>
      secondary-1
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 5,
        "width": "16.6%",
      }
    }
  >
    <Text>
      support-1
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <Text>
      secondary-2
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 5,
        "width": "16.6%",
      }
    }
  >
    <Text>
      support-2
    </Text>
  </View>
</View>
`;

exports[`4. secondary two no pic and two - huge 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 10,
    }
  }
>
  <View
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <Text>
      secondary-1
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 5,
        "width": "16.6%",
      }
    }
  >
    <Text>
      support-1
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <Text>
      secondary-2
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 5,
        "width": "16.6%",
      }
    }
  >
    <Text>
      support-2
    </Text>
  </View>
</View>
`;
